Implementadas mas funciones para editar de los personajes, practicamente acabada esa parte. Arreglados todos los errores ocurridos en commits anteriores. Ya se guardan bien los personajes editados otra vez...